--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 /* ----------General Declerations------------ */
 :root {
-    --main-bg-color: #e0e1dd;
+    --main-bg-color: #eff0ef;
     --heading-bg-color: #588157;
     --heading-tab-text: #ffffff;
     --decorative: #a3b18a;
