--- a/chamber/styles/directorybackup.css
+++ b/chamber/styles/directorybackup.css
@@ -1,4 +1,4 @@
-
+/* ----------General Declerations------------ */
 :root {
     --main-bg-color: #eff0ef;
     --heading-bg-color: #588157;
@@ -49,7 +49,7 @@ img {
     background-color: var(--heading-tab-text);
 }
 
-
+/*----------Header---------- */
 .flag {
     display: grid;
     position: relative;
@@ -131,7 +131,7 @@ nav ul {
     display: grid;
 }
 
-
+/* ----------Main---------- */
 .events,
 .current-weather,
 .weather-forcast {
@@ -163,7 +163,7 @@ nav ul {
 }
 
 
-
+/* Home info grid */
 .hero {
     margin: 0 auto;
     width: 100%;
@@ -214,15 +214,15 @@ h6,
 
 .rand-store section {
     flex: 1 1 150px;
-
+    /*  Stretching: */
     flex: 0 1 200px;
-
+    /*  No stretching: */
     margin: 5px;
     background-color: var(--heading-bg-color);
     padding: 10px;
 }
 
-
+/* End Home Info */
 .list {
     display: flex;
     flex-direction: column;
@@ -313,7 +313,7 @@ h6,
     padding: 2px;
 }
 
-
+/* ----------Footer---------- */
 .footer-container {
     flex: 1 1 350px;
     flex: 1 1 350px;
@@ -331,11 +331,11 @@ h6,
     left: 5px;
 }
 
-
+/* -----------------------Larger Screens---------------------------*/
 
 @media (min-width: 900px) {
 
-
+    /* ----------Header---------- */
 
     #menu {
         display: none;
@@ -351,6 +351,7 @@ h6,
 
     }
 
+    /*---------Navigatio Bar---------*/
     .active {
         border: solid yellowgreen;
     }
@@ -381,17 +382,18 @@ h6,
         text-align: center;
     }
 
+    /* ----------Main---------- */
     .events,
     .current-weather,
     .weather-forcast {
         flex: 1 1 150px;
-
+        /*  Stretching: */
         flex: 0 1 150px;
-  
+        /*  No stretching: */
         margin: 5px;
     }
 
-
+    /* Home info grid */
     .events {
         grid-column: 1 / 7;
     }
@@ -423,13 +425,14 @@ h6,
 
     .rand-store section {
         flex: 1 1 150px;
-
+        /*  Stretching: */
         flex: 0 1 300px;
-
+        /*  No stretching: */
         margin: 10px;
         padding: 10px;
     }
 
+    /* ------------------------ */
 
 
 }
