--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -1,4 +1,3 @@
-
 :root {
     --main-bg-color: #eff0ef;
     --heading-bg-color: #588157;
@@ -125,6 +124,10 @@ nav ul {
 #menu.show::before {
     content: "X";
     font-size: 6.5rem;
+}
+
+.active {
+    border-left: solid yellowgreen;
 }
 
 .show li {
@@ -387,7 +390,7 @@ h6,
         flex: 1 1 150px;
 
         flex: 0 1 150px;
-  
+
         margin: 5px;
     }
 
