--- a/styles/index.css
+++ b/styles/index.css
@@ -117,6 +117,9 @@ nav ul {
     border: solid var(--decorative-border) 2px;
     border-radius: 10rem;
     margin: 0px;
+    transition-timing-function: ease-in-out;
+    transform: translate(20px);
+    transition-duration: 0.5s
 }
 
 #menu.show::before {
@@ -125,7 +128,7 @@ nav ul {
 
 .profile-picture {
     position: relative;
-    top: 35px
+    top: 35px;
 }
 
 .show li {
@@ -221,6 +224,9 @@ h3 {
 .open-button-t:hover,
 .open-button-f:hover {
     background-color: var(--heading-bg-color);
+    transform: scale(1.3) rotate(1deg);
+    transition-timing-function: ease-in-out;
+    transition-duration: 0.2s;
 }
 
 
