--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -1,8 +1,8 @@
 :root {
     --main-bg-color: #eff0ef;
-    --heading-bg-color: #588157;
+    --heading-bg-color: #415E40;
     --heading-tab-text: #ffffff;
-    --decorative: #a3b18a;
+    --decorative: #4C5E40;
     --dark-decorative: #344e41;
     --bar-color: #333;
 }
