--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,9 @@
 /* ----------General Declerations------------ */
 :root {
     --main-bg-color: #eff0ef;
-    --heading-bg-color: #588157;
+    --heading-bg-color: #415E40;
     --heading-tab-text: #ffffff;
-    --decorative: #a3b18a;
+    --decorative: #4C5E40;
     --dark-decorative: #344e41;
 }
 
