--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -146,6 +146,11 @@ nav ul {
     margin: 0px;
 }
 
+.weather-forcast {
+    text-align: center;
+    font-size: 20px;
+}
+
 .weather-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -160,7 +165,7 @@ nav ul {
 }
 
 .current-weather h5 {
-    color: var(--bar-color);
+    color: var(--heading-tab-text);
     margin: 4px;
     font-weight: bold;
 }
@@ -388,9 +393,7 @@ h6,
     .current-weather,
     .weather-forcast {
         flex: 1 1 150px;
-
         flex: 0 1 150px;
-
         margin: 5px;
     }
 
