--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -62,14 +62,14 @@ img {
 }
 
 #menu {
-    font-size: 8rem;
+    font-size: 6rem;
     font-weight: 700;
     text-decoration: none;
     margin: 10px;
     padding: 0px 0px;
     position: absolute;
     top: .50rem;
-    right: 1rem;
+    right: .5rem;
     color: var(--heading-tab-text);
     background: none;
 }
