--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -4,7 +4,8 @@
         grid-template-areas:
             "photograph name"
             "photograph descirption"
-            "photograph location";
+            "photograph location"
+            "button";
     }
 
     .explore-card img {
