--- a/final_project/styles/small.css
+++ b/final_project/styles/small.css
@@ -44,6 +44,14 @@ h5 {
     padding: 5px;
 }
 
+.hero {
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    border-radius: .50rem;
+}
+
 p {
     font-family: abel;
 }
